syntax = "proto3";

package crypto;

option go_package = "/mycrypto";

message TradeInfo {
  string S = 1; // start
  string E = 2; // end
  float Rate = 3;
  float Size = 4;
}

service TradeStream {
  rpc StreamTrades (TradeRequest) returns (TradeResponse);
}

message TradeRequest {
  repeated TradeInfo tradeRoute = 1;  // map of trade route
}

message TradeResponse {
  string result = 1;
}